<resources>
    <string name="app_name">Age_In_Minutes</string>
    <string name="calculate_your">CALCULATE YOUR</string>
    <string name="age">AGE</string>
    <string name="in_minutes">IN MINUTES</string>
    <string name="select_date">SELECT DATE</string>
    <string name="_12_12_2020">12.12.2020</string>
    <string name="selected_date">Selected Date</string>
    <string name="_140000000">140000000</string>
    <string name="in_minute">IN MINUTES</string>
</resources>