<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/lightGreen"
    android:padding="16dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/calculate_your"
        android:textColor="#264653"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:background="#2A9D8F"
        android:padding="16dp"
        android:text="@string/age"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/in_minutes"
        android:textColor="#264653"
        android:textSize="24sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/DateSelector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:backgroundTint="#432818"
        android:text="@string/select_date"
        android:textColor="#FCD5CE"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/selectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:fontFamily="serif"
        android:text="@string/_12_12_2020"
        android:textColor="#264653"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:fontFamily="serif"
        android:text="@string/selected_date"
        android:textColor="#3A0CA3"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:fontFamily="serif"
        android:text="@string/_140000000"
        android:textColor="#FF006E"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/in_minute"
        android:textColor="#264653"
        android:textSize="24sp"
        android:textStyle="bold" />

</LinearLayout>